[gd_scene load_steps=4 format=2]

[ext_resource path="res://Code/Level Manager/Game.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Chonk.otf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 5 )

[node name="GameTitle" type="Node2D"]
script = ExtResource( 1 )

[node name="Start" type="Button" parent="."]
margin_left = 173.0
margin_top = 164.0
margin_right = 228.0
margin_bottom = 190.0
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 76.0
margin_top = 80.0
margin_right = 333.0
margin_bottom = 152.0
custom_colors/font_color = Color( 1, 0.929412, 0.2, 1 )
custom_fonts/font = SubResource( 1 )
text = "SHERIFF 22"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
