[gd_scene load_steps=4 format=2]

[ext_resource path="res://Video/movie.webm" type="VideoStream" id=1]
[ext_resource path="res://Code/Level Manager/Game.gd" type="Script" id=2]
[ext_resource path="res://2D/Textures/brenda starr texture.jpg" type="Texture" id=3]

[node name="Video1" type="Node2D"]
script = ExtResource( 2 )

[node name="BrendaStarrTexture" type="Sprite" parent="."]
position = Vector2( 210, 117 )
scale = Vector2( 0.626573, 0.253906 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="VideoPlayer" type="VideoPlayer" parent="."]
margin_left = 82.0
margin_right = 342.0
margin_bottom = 245.0
stream = ExtResource( 1 )
autoplay = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="finished" from="VideoPlayer" to="." method="_VideoIntro1"]
