[gd_scene load_steps=6 format=2]

[ext_resource path="res://2D/Textures/brenda starr texture.jpg" type="Texture" id=1]
[ext_resource path="res://Fonts/Baskic8-Bold.otf" type="DynamicFontData" id=2]
[ext_resource path="res://2D/pistolero/front diagonal/front diagonal walk3.png" type="Texture" id=3]
[ext_resource path="res://Code/Level Manager/Game.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="STORY" type="Node2D"]
script = ExtResource( 4 )

[node name="BrendaStarrTexture" type="Sprite" parent="."]
position = Vector2( 127, 127 )
scale = Vector2( 0.366434, 0.257812 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="StartBattle" type="Button" parent="."]
margin_left = 191.0
margin_top = 219.0
margin_right = 232.0
margin_bottom = 240.0
text = ">>"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FrontDiagonalWalk3" type="Sprite" parent="."]
position = Vector2( 88, 98 )
scale = Vector2( 4.65625, 4.90625 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = 32.0
margin_top = 192.0
margin_right = 223.0
margin_bottom = 245.0
custom_colors/font_color = Color( 0.960784, 0.827451, 0.0431373, 1 )
custom_fonts/font = SubResource( 1 )
text = "Are u ready to fight?"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="StartBattle" to="." method="_on_StartBattle_pressed"]
